scss/partials/_global.scss
/* ... */
#navigation {
	text-align: right;

	> ul {
		position: relative;
		@include content-clearfix;

		> li {
			display: inline-block;
			margin-bottom: -5px;
			padding-bottom: 5px;
			max-width: 100%;

			strong {
				display: inline-block;
				max-width: 100%;
				overflow: hidden;
				text-overflow: ellipsis;
			}

			> ul {
				display: none;
				position: absolute;
				top: 100%;
				right: 0;
				background: white;
				margin-top: 5px;
				border: 2px solid lighten($text, 70%);
				font-size: 1rem;
				padding: 5px 0;
				border-radius: 5px;

				&:before {
					border: solid;
					border-width: 0 6px 6px 6px;
					border-color: lighten($text, 70%) transparent;
					top: -6px;
					content: "";
					display: block;
					left: 60%;
					position: absolute;
					z-index: 99;
				}

				li {
					position: relative;

					&.sep {
						margin-bottom: 5px;
						padding-bottom: 5px;
						border-bottom: 1px solid lighten($text, 80%);
					}

					a, input {
						display: block;
						text-decoration: none;
						padding: 0 5px;
						&:hover {
							background: lighten($text, 80%);
						}
					}
				}
			}

			&:hover > ul {
				display: inline-table;
			}
		}
	}

	form {
		display: block;
		width: 100%;
		margin: 0;
		padding: 0;
	}

	input {
		margin: 0;
		padding: 0;
		border: none;
		background: inherit;
		font: inherit;
		display: block;
		width: 100%;
		text-align: right;
		cursor: pointer;
	}
}

.navlist {
	display: inline;

	input {
		border: none;
		background: none;
		color: inherit;
		cursor: pointer;
		display: inline-block;
		height: 26px;
		padding: 0 16px;
		margin: 0 !important;
		-webkit-appearance: none;
		border-radius: 0;
	}

	a {
		padding: 0 8px;
		color: lighten($text, 30%);
	}

	a, input[type=submit] {
		cursor: pointer;
		display: inline-block;
		min-height: 26px;
		text-decoration: none;
		font-size: 16px;
		border-right: 1px solid white;
		vertical-align: bottom;

		&.current, .ct {
			color: $text;
		}

		.ct {
			font-weight: bold;
		}

		&:hover, &.current {
			background: lighten($text, 80%);
		}
	}

	&.actions {
		form {
			padding: 0;
		}

		a {
			padding: 0 12px;
		}

		a, form {
			display: block;
			float: right;
			text-align: center;
			color: $text;
			font-size: 24px;
		}

		.sbutton {
			float: right;
		}

		input {
			display: inline-block;
			padding: 0 12px;

			&:last-child {
				border-right: none;
			}
		}
	}

	form {
		color: $text;
		height: 26px;
	}

	&.profile {
		padding-bottom: 2px;
		border-bottom: 1px solid lighten($text, 70%);
	}
}

.popover {
	position: absolute;
	background: white;

	&.bottom {
		margin-top: 5px;
		left: auto;
	}
}

.popover-inner {
	padding: 3px;
	background: $text;
	border-radius: 6px;
}

.popover-content {
	background: white;
	border-radius: 3px;
	padding: 5px;
	li {
		list-style: none;
	}

	.icon {
		font-size: 16px;
		padding-right: 2px;
	}
}

.tooltip {
	position: absolute;
	z-index: 1020;
	display: block;
	padding: 5px;
	font-size: 14px;
	opacity: 0;
	filter: alpha(opacity=0);
	visibility: visible;

	&.in {
		opacity: 0.8;
		filter: alpha(opacity=80);
	}

	&.top {
		margin-top: -2px;

		.tooltip-arrow {
			bottom: 0;
			left: 50%;
			margin-left: -5px;
			border-top: 5px solid #000000;
			border-right: 5px solid transparent;
			border-left: 5px solid transparent;
		}
	}

	&.right {
		margin-right: -2px;

		.tooltip-arrow {
			top: 50%;
			left: 0;
			margin-top: -5px;
			border-top: 5px solid transparent;
			border-right: 5px solid #000000;
			border-bottom: 5px solid transparent;
		}
	}

	&.left {
		margin-left: -2px;

		.tooltip-arrow {
			top: 50%;
			right: 0;
			margin-top: -5px;
			border-top: 5px solid transparent;
			border-bottom: 5px solid transparent;
			border-left: 5px solid #000000;
		}
	}

	&.bottom {
		margin-bottom: -2px;

		.tooltip-arrow {
			top: 0;
			left: 50%;
			margin-left: -5px;
			border-right: 5px solid transparent;
			border-bottom: 5px solid #000000;
			border-left: 5px solid transparent;
		}
	}
}

.tooltip-inner {
	max-width: 200px;
	padding: 3px 8px;
	color: #ffffff;
	text-align: center;
	text-decoration: none;
	background-color: #000000;
	border-radius: 4px;
}

.tooltip-arrow {
	position: absolute;
	width: 0;
	height: 0;
}

#content {
	h1 {
		font-size: 1.4em;
	}
	h2 {
		font-size: 1.3em;
	}

	h3 {
		font-size: 1.2em;
	}

	h4 {
		font-size: 1.1em;
	}

	h5 {
		text-transform: uppercase;
	}

	h6 {
		font-weight: bold;
	}

	h1, h2, h3, h4, h5, h6 {
		line-height: 2rem;
		margin: 0.75em 0 0.25em 0;
	}

	.overflow {
		overflow: auto;
	}
}

.subscribe_form {
	margin-bottom: 1em;
	@include clearfix;
}

.no label {
	font-weight: bold;
}

#footer > div {
	border-top: 1px solid #444;
	padding: 0.5em 0;
	margin-top: 0.5em;
	color: lighten($text, 20%);
	font-size: 0.8em;
}

form {
	.field {
		padding: 5px 0;
	}
	.title {
		text-align: right;
		h6 {
			margin: 0 !important;
		}
	}

	.input {
		input, select {
			width: 90%;

			&[type="checkbox"] {
				width: inherit;
			}
		}
	}

	.helptext {
		font-size: 0.8em;
		color: lighten($text, 30%);
	}
}

.errorlist {
	color: lighten(red, 10%);
	a {
		&:not(.dismiss) {
			color: inherit;
		}
		&.dismiss {
			text-decoration: none;
		}
	}
}

.input .errorlist {
	font-size: 0.9em;
}

.back a {
	text-decoration: none;
}

.colors {
	.color {
		display: inline-block;
		width: 20px;
		height: 20px;
		margin-right: 5px;
		padding: 3px;
		margin: 4px 7px 4px 4px;
		cursor: pointer;

		&:hover, &.selected {
			padding: 7px;
			margin: 0 3px 0 0;
		}

		&.selected {
		}
	}
}

.pagination {
	text-align: right;
	white-space: nowrap;

	a, span {
		padding: 0 4px;
		margin: 0 2px;

		&:first-child {
			margin-left: 0;
		}
	}

	a {
		background: lighten($text, 80%);
		border-radius: 3px;
		text-decoration: none;

		&:hover {
			background: $text;
			color: white;
		}
	}
}

#entries {
	margin: 0.5em 0;

	.empty {
		padding: 7em 1em 8em 1em;
		background: darken(white, 5%);
		border-radius: 5px;
	}
}
/* ... */

